src/BadScript.Tests/tests/passing/operators/block/if/single.bs
a = 1
if(a == 1)
{
	return true
}
return false