src/BadScript.Tests/tests/failing/invalid-operations/missing_operator_04.bs
class MyClass
{
	
}

a = new MyClass()
a()